# Analysis

./: CMakeLists.txt  accretion_rate.ipynb  accretion_rate_fft.ipynb  dens_radial_profiles.ipynb  density_PDF.ipynb  density_fft.ipynb  fft3_1.py  local_accretion_rate_fft.ipynb  local_density_fft.ipynb  norm.py  physconst.py  slice_density_fft.ipynb  total_mass.ipynb  vtk_reader.py  z-velocity_dispersion_PDF.ipynb  z_vel_radial_profiles.ipynb
CMakeLists/: CMakeLists-myung.txt  CMakeLists.txt
Config/: Darwin.gcc.defs  Darwin.mpicc.defs
Real_Problems/DynamicalFriction/: CMakeLists.txt  definitions.h  definitions_usr.h  friction.c  friction.h  init.c  init_tools.c  init_tools.h  input_data.c  interpolation.c  interpolation.h  io_tools.h  macros_usr.h  normalization_df.nb  normalization_df.py  pluto.ini  pluto_usr.h  runtime_setup.c  userdef_output.c
Real_Problems/Outflows/: accretion.c  accretion.h  clouds.c  clouds.h  cmd_line_opt.c  colortable.c  cooling_source.c  grid_geometry.c  grid_geometry.h  hot_halo.c  hot_halo.h  idealEOS.c  idealEOS.h  init_tools.c  init_tools.h  input_data.c  interpolation.c  interpolation.h  io_tools.c  io_tools.h  local_make  macros_usr.h  main.c  main_42.c  main_42_with_mpi_time.c  makefile  mappers3D.c  mean_mol_weight.c  multicloud_init.c  multicloud_init.h  nozzle.c  nozzle.h  outflow.c  outflow.h  pluto_usr.h  random.c  random.h  read_grav_table.c  read_grav_table.h  read_hot_table.c  (+7 more)
Real_Problems/Outflows/Cooling/TABULATED/: radiat.c
Real_Problems/Outflows/setup/2D_winds_Mach/: pluto.ini
Real_Problems/Outflows/setup/accretion/: README.txt  definitions.h  definitions_usr.h  pluto.ini
Real_Problems/Outflows/setup/clouds_settling/: CMakeLists.txt  NOTES.txt  definitions.h  definitions_usr.h  init.c  pluto.ini
Real_Problems/Outflows/setup/jet/: pluto-jet.ini
Real_Problems/Outflows/setup/mwagn/: CMakeLists.txt  NOTES.txt  definitions.h  definitions_usr.h  init.c  pluto-01.ini  userdef_output.c
Real_Problems/Outflows/setup/starburst/: README.txt  definitions.h  definitions_usr.h  pluto.ini
Real_Problems/Outflows/setup/supernova/: README.txt  definitions.h  definitions_usr.h  pluto.ini
Real_Problems/Outflows/setup/ufo/: CMakeLists.txt  definitions.h  definitions_usr.h  pluto-settling.ini  userdef_output.c
Real_Problems/RadiativeShock/: CMakeLists.txt  cmd_line_opt.c  cooling_source.c  cooltable.dat.bak  definitions.h  definitions_usr.h  init.c  init_tools.c  init_tools.h  input_data.c  interpolation.c  interpolation.h  local_make  macros_usr.h  pluto-v140-t3e5-1e4.ini  pluto-v140-t3e5.ini  pluto-v200-t1e6-3e4.ini  pluto-v200-t1e6-wall.ini  pluto-v200-t1e6.ini  pluto-v300-t3e6-1e5.ini  pluto.ini  pluto_usr.h  radiat.c  read_mu_table.h  runtime_setup.c  shock.c  shock.h  userdef_output.c
Src/: globals.h  input_data.c  mpi_sub_decomp.c  pluto.h  prototypes.h  restart.c  structs.h
Src/HD/: ausm_up.c
Src/RHD/: energy_solve.c  pressure_fix.c  prim_eqn.c
Test_Problems/MHD/Jet/: definitions_17.h  definitions_18.h
Tools/Gnuplot/Doc/: index.html
Tools/Python/: define_problem.py
